Squashing bugs, and making improvements.

--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -27,13 +27,13 @@
 }
 
 #main-recipe-info {
-  width: 20%;
-
+  width: 35%;
+  display: inline-block;
 
 }
 
 #directions {
-  width: 70%;
-  float: right;
+  width: 50%;
+  display: inline-block;
 
 }
